<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TopTop</string>
    <!--///////////////// Login Activity /////////////////////    -->
    <string name="hint_edtPhone">Enter your number phone</string>
    <string name="ic_btnNext">"&#62;&#62;"</string>
    <string name="ic_back">\u003C</string>
    <string name="hint_edtOtp">OTP with 6 digits</string>
    <string name="hint_edtPassword">Enter your password</string>
    <string name="hint_edtConfirm">Confirm your password</string>
    <string name="btnChoicePhone">Using phone number</string>
    <string name="btnChoiceEmail">Using Google Account</string>
    <string name="btnChoiceFacebook">Using facebook account</string>
    <string name="btn_signout">Đăng xuất</string>
    <string name="error_PhoneAuth">%1$s is invalid</string>
    <string name="error_Password">Password only include alphabet character and number</string>
    <string name="error_existedPhone">Account with this phone has existed</string>
    <string name="error_existedEmail">Account with this email has existed</string>
    <string name="error_confirm">Confirm password is not correct</string>
    <string name="error_verify">Verify Failed. Try again!</string>
    <string name="error_signin">%1$s don\'t have an account. Please sign up!</string>
    <string name="successful_signin">Sign in successfully</string>
    <string name="successful_changePassword">Change password successfully</string>
    <string name="otp_sent">OTP has been sent</string>
    <string name="error_Otp">Please 6 digits OTP</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="action_search">Search...</string>
    <string name="title_activity_fullscreen_avatar">FullscreenAvatarActivity</string>
    <string name="hint_username">Enter username</string>
    <string name="error_undefined">Something is wrong. Please try again!</string>
    <string name="error_upload_video">Video must have duration less than 15s and maximum resolution is 720p</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_alt">Already have an account? Sign in.</string>
    <string name="sign_in_alt">Don\'t have an account yet? Sign up.</string>
    <string name="ic_add">"&#10133;"</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="home">Home</string>
    <string name="friends">Friends</string>
    <string name="inbox">Inbox</string>
    <string name="profile">Profile</string>
    <string name="following">Following</string>
    <string name="for_you">For you</string>
    <string name="hint_description">Enter your description</string>
    <string name="post">Post</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="template_follow">started following you</string>
    <string name="template_comment">commented on your video</string>
    <string name="template_like">liked your video</string>
    <string name="request_account_title">You are anonymous</string>
    <string name="request_account_message">Would you like you sign up or sign in?</string>
    <string name="change_photo">Change Photo</string>
    <string name="edit">Edit</string>
    <string name="apply">Apply</string>
    <string name="name_label">Name:</string>
    <string name="username_label">Username:</string>
    <string name="email_label">Email:</string>
    <string name="phone_label">Phone:</string>
    <string name="birthdate_label">Birthdate:</string>
    <string name="save">Save</string>
    <string name="error_username">Usernames can contain letters, numbers, \"_\" but the first character must not be a number and the minimum length is 3
    </string>
    <string name="error_birthdate">Birhdate is invalid or under 16 years old</string>
    <string name="exist_username">This username has existed</string>
    <!--   //////////////////////////////////////////////////////////   -->
</resources>