<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tiktok_black"
    android:orientation="vertical"
    tools:context=".PhoneSignupActivity"
    android:id="@+id/llSigninPage">

    <fragment
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragWaiting"
        android:name="com.example.tiktokcloneproject.WaitingFragment"/>



    <LinearLayout
        android:id="@+id/llPhone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:orientation="vertical"
        android:gravity="center"
        >
        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:drawableLeft="@drawable/ic_phone"
            android:padding="8dp"
            android:hint="@string/hint_edtPhone"
            android:textColor="@color/tiktok_black"
            android:textColorHint="@color/hint"
            android:background="@color/tiktok_white"
            />

        <Button
            android:id="@+id/btnPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ic_btnNext"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">
        <EditText
            android:id="@+id/edtOtp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:gravity="center"
            android:padding="8dp"
            android:hint="@string/hint_edtOtp"
            android:textColor="@color/tiktok_black"
            android:textColorHint="@color/hint"
            android:background="@color/tiktok_white"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnOtp"
            android:text="@string/ic_btnNext"/>

    </LinearLayout>


</LinearLayout>