<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tiktok_black"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.TikTokCloneProject.FullscreenContainer"
    tools:context="activity.VideoHomeScreenActivity">

    <FrameLayout
        android:id="@+id/main_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/background_video"
                android:scaleType="centerCrop"
                android:layout_centerInParent="true"
                ></ImageView>

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/loading" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" />

        </RelativeLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btnHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:drawableTop="@drawable/ic_home"
            android:fontFamily="@font/montserrat_medium"
            android:inputType="textCapSentences"
            android:text="@string/home"
            android:onClick="onClick"
            android:textColor="@color/tiktok_white"
            android:textSize="10dp" />



        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btnSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:drawableTop="@drawable/icon_search"
            android:fontFamily="@font/montserrat_medium"
            android:inputType="textCapSentences"
            android:text="Search"
            android:onClick="onClick"
            android:textColor="@color/tiktok_white"
            android:textSize="10dp" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/btnAddVideo"
                android:layout_width="52dp"
                android:layout_height="32dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/btn_add_shape"
                android:onClick="onClick"
                android:text="@string/ic_add"
                android:textSize="12dp"
                android:fontFamily="@font/montserrat_extralight"
                android:textColor="@color/tiktok_black" />

        </LinearLayout>

        <Button
            android:id="@+id/btnInbox"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_inbox"
            android:fontFamily="@font/montserrat_medium"
            android:inputType="textCapSentences"
            android:text="@string/inbox"
            android:onClick="onClick"
            android:textColor="@color/tiktok_white"
            android:textSize="10dp" />

        <Button
            android:id="@+id/btnProfile"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_profile"
            android:fontFamily="@font/montserrat_medium"
            android:inputType="textCapSentences"
            android:text="@string/profile"
            android:onClick="onClick"
            android:textColor="@color/tiktok_white"
            android:textSize="10dp" />

    </LinearLayout>
</LinearLayout>